# Mobile-robotics-final-project

docker_ws/: Dockerfile.livelab7
ros_ws/install/merging_pkg/lib/merging_pkg/: merger_node  robot_laser_filter
ros_ws/install/merging_pkg/share/merging_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws/install/merging_pkg/share/merging_pkg/launch/: map_merging.launch.py
ros_ws/install/obstacle_fusion/lib/obstacle_fusion/: fusion_node  prediction_to_costmap_node
ros_ws/install/obstacle_fusion/share/obstacle_fusion/: package.bash  package.dsv  package.ps1  (+2 more)
ros_ws/log/: latest_build
ros_ws/src/merging_pkg/: package.xml  setup.cfg  setup.py
ros_ws/src/merging_pkg/launch/: laser_filters.launch.py
ros_ws/src/merging_pkg/maps/: merged_map_shutdown.pgm  merged_map_shutdown.yaml
ros_ws/src/merging_pkg/merging_pkg/: robust_map_merger.py
ros_ws/src/multi_robot_bringup/config/: robots.yaml
ros_ws/src/multi_robot_bringup/multi_robot_scripts/: utils.py
ros_ws/src/obstacle_fusion/: package.xml  setup.py
ros_ws/src/obstacle_fusion/obstacle_fusion/: fusion_node.py
ros_ws/src/slam_multi_robot/: package.xml  setup.py
ros_ws/src/slam_multi_robot/config/: robots.yaml
ros_ws/src/slam_multi_robot/launch/: general_bringup.launch.py  slam_bringup.launch.py  static_transform.launch.py  tb1_slam.launch.py  tb2_slam.launch.py  tb4_slam.launch.py
ros_ws/src/slam_multi_robot/multi_robot_scripts/: utils.py
ros_ws/src/slam_multi_robot/params/: params_nav_tb1.yaml  tb1_slam.yaml  tb2_slam.yaml  tb3_slam.yaml  tb4_slam.yaml
(+28 files in other folders)
